added enemy spawn and game end logic
